--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,1 @@
-GEMINI_API_KEY = "AIzaSyDjbHMaN3rIFlUbx8Nm9c2mXx_E1TGVl54"
+GROQ_API_KEY = "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"
