--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,1 @@
-GROQ_API_KEY = "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"
-NEWSAPI_KEY = "291964d715694e418bd0c459176a7125"
+GNEWS_API_KEY = "165db0a8187d6d14a3a48b0cfc05aa89"
