--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,2 @@
-GNEWS_API_KEY = "165db0a8187d6d14a3a48b0cfc05aa89"
+GROQ_API_KEY =  "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"
+BRAVE_API_KEY = "BSAbwOYgP0UHwLVz0luAEIKrA8LXdS-"
